fix words cropper, fix styles

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,3 +1,7 @@
+body {
+    background: rgba(0, 0, 0, 0.7);
+}
+
 .dio-intint__wrapper {
     max-width: 768px;
     margin: 0 auto;
@@ -113,7 +117,7 @@
     text-decoration: none;
     border-radius: 5px;
     font-weight: 600;
-    min-width: 130px;
+    min-width: 170px;
 }
 
 .dio-intint__cta--offset {
